# KSiS

lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  Client.cpp  Server.cpp
lab2-UDP/: CMakeLists.txt  Client.cpp  Server.cpp
